[package]
name = "nmea0183"
version = "0.1.0"
authors = ["Nikita Staroverov <nsforth@gmail.com>"]
edition = "2018"
description = "NMEA 0183 parser targetting mostly embedded devices but not limited to."
homepage = "https://github.com/nsforth/nmea0183"
license = "BSD-3-Clause"
keywords = ["NMEA", "nmea", "parser", "gps", "embedded"]
categories = ["embedded", "no-std", "parser-implementations"]
readme = "README.md"

[dependencies]

[badges]
travis-ci = { repository = "nsforth/nmea0183", branch = "master" }
codecov = { repository = "nsforth/nmea0183", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "nsforth/nmea0183" }
is-it-maintained-open-issues = { repository = "nsforth/nmea0183" }
maintenance = { status = "actively-developed" }
