[package]
name = "nmea0183"
version = "0.6.0"
authors = ["Nikita Staroverov <nsforth@gmail.com>"]
edition = "2021"
description = "NMEA 0183 parser targetting mostly embedded devices but not limited to."
homepage = "https://github.com/nsforth/nmea0183"
repository = "https://github.com/nsforth/nmea0183"
license = "BSD-3-Clause"
keywords = ["NMEA", "nmea", "parser", "gps", "embedded"]
categories = ["embedded", "no-std", "parser-implementations"]
readme = "README.md"

[dependencies]
defmt = { version = "1", optional = true }
heapless = { version = "0.9", optional = true }

[features]
default = ["strict"]
mtk = []
txt = ["dep:heapless"]
strict = []
defmt = ["dep:defmt"]

[badges]
codecov = { repository = "nsforth/nmea0183" }
is-it-maintained-issue-resolution = { repository = "nsforth/nmea0183" }
is-it-maintained-open-issues = { repository = "nsforth/nmea0183" }
maintenance = { status = "actively-developed" }
